--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,42 @@
 
 .game {
-position: relative;
-width: fit-content;
-left: 30%;
-display: -webkit-inline-flex;
-padding: 5px;
- 
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 300px;
+  padding-top: 15%;
+
+}
+
+.game-board{
+  position: relative;
+  left: 12.5%;
+  width: fit-content;
+  
   
 }
 .game-info {
   font-family: 'Agency FB';
   font-size: 40px;
   text-align: center;
-  position: relative;
-  left : 50px;
   
- 
 }
 
 
 .square {
-  background-color: white;
+  background-color: #fff;
+  background-repeat:no-repeat;
   font-size: x-large;
   float: left;
   width: 70px;
   height: 70px;
-  border: 2px solid black;
-  
+  border: 2px solid coral;
 
 }
 
 .board-row {
-  height: 30%;
- 
-
+height: 30%;
+width: fit-content;
 }
 .board-row:after {
   clear: both;
@@ -43,29 +46,23 @@ padding: 5px;
 
 .button {
   
- 
-  font-size: 25px;
+  font-size: 30px;
   cursor: pointer;
   text-align: center;
+  font-family: 'Agency FB';
   
  
   color: #fff;
-  background-color: #4CAF50;
+  background-color:coral;
 
   border-radius: 5px;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 7px darkslategray;
 }
 
-.button:hover {background-color: #3e8e41}
+.button:hover {background-color:chocolate}
 
 .button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
+  background-color: chocolate;
+  box-shadow: 0 2px black;
   transform: translateY(4px);
-}
-.ol {
-  
-  list-style: none; 
-  font: 15px 'trebuchet MS', 'lucida sans';
-  
 }
